@@ -13,8 +13,10 @@ apport (1.7-0ubuntu3) UNRELEASED; urgency=low
   * apport/hookutils.py: Include modem-manager syslog messages in WifiSyslog
   * data/general-hooks/ubuntu.py: Exclude bugs already aimed at grub2 from the
     update-grub test (in support of Colin's change above)
+  * data/general-hooks/ubuntu.py: Redirect failures in /etc/kernel/*.d to the
+    package owning the file which failed
 
- -- Matt Zimmerman <mdz@ubuntu.com>  Wed, 19 Aug 2009 13:49:45 +0100
+ -- Matt Zimmerman <mdz@ubuntu.com>  Wed, 19 Aug 2009 15:56:23 +0100
 
 apport (1.7-0ubuntu2) karmic; urgency=low
 
